[metadata]
name = examplepackage
version = attr: examplepackage.__version__
url = https://example.com
project_urls =
    Documentation = https://example.com/docs
    Changes = https://example.com/changes
    Source Code = https://example.com/code-repository
    Issue Tracker = https://example.com/issue-tracker
license = MIT License
license_files = LICENSE
author = Rasmus Einarsson
author_email =  mr [at] rasmuseinarsson.se
maintainer = Rasmus Einarsson
maintainer_email = python-examplepackage [at] rasmuseinarsson.se
description = This is an example package.
keywords =
    example
    packaging
long_description = file: README.md
long_description_content_type = text/markdown
# See list of classifiers at https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >= 3.7
install_requires =
    click >= 8.0

[options.entry_points]
console_scripts =
    cli-command = examplepackage.cli:main

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
