[metadata]
name = examplepackage
version = attr: examplepackage.__version__
url = https://example.com
project_urls =
    Documentation = https://example.com/docs
    Changes = https://example.com/changes
    Source Code = https://example.com/code-repository
    Issue Tracker = https://example.com/issue-tracker
license = MIT License
license_files = LICENSE
# No support for multiple authors or email addresses
# Specify multiple authors/email addresses as a single string, e.g.,
# author = Jane Doe, John Doe
# author_email = jane@example.com, john@example.com
# https://stackoverflow.com/questions/9999829/how-to-specify-multiple-authors-emails-in-setup-py
author = Rasmus Einarsson
author_email = python-examplepackage@rasmuseinarsson.se
maintainer = Rasmus Einarsson
maintainer_email = python-examplepackage@rasmuseinarsson.se
description = This is an example package.
keywords =
    example
    packaging
long_description = file: README.md
long_description_content_type = text/markdown
# See list of classifiers at https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >= 3.7
install_requires =
    click >= 8.0

[options.entry_points]
console_scripts =
    cli-command = examplepackage.cli:main

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
